Test for mobile phone number routing via app

--- a/contact.html
+++ b/contact.html
@@ -112,6 +112,14 @@
             display: none;
         }
         
+        .admin-phone {
+            color: inherit; /* Matches surrounding text color */
+            text-decoration: none; /* Removes underline for the link */
+        }
+        .admin-phone:hover {
+            text-decoration: underline; /* Adds an underline on hover */
+        }
+        
 
         /* Use WebP if supported */
         @supports (background-image: url("data:image/webp;base64,UklGRh4AAABXRUJQVlA4TCEAAAAvAAAAHEpIQkAASAAAAAAAAAAAAPbWcyc=")) {
@@ -215,7 +223,7 @@
                                 <div class="admin-name">S. Suresh Babu</div>
                                 <div class="admin-contact">
                                     <i class="fas fa-phone me-2"></i>
-                                    <span class="admin-phone">9645101299</span>
+                                    <a href="tel:9847813736" class="admin-phone">9645101299</a>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +233,7 @@
                                 <div class="admin-name">B. Byju</div>
                                 <div class="admin-contact">
                                     <i class="fas fa-phone me-2"></i>
-                                    <span class="admin-phone">9847813736</span>
+                                    <a href="tel:9847813736" class="admin-phone">9847813736</a>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +243,7 @@
                                 <div class="admin-name">Prabhaja Ashokan</div>
                                 <div class="admin-contact">
                                     <i class="fas fa-phone me-2"></i>
-                                    <span class="admin-phone">9995770433</span>
+                                    <a href="tel:9847813736" class="admin-phone">9995770433</a>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +253,7 @@
                                 <div class="admin-name">N. Manikandan</div>
                                 <div class="admin-contact">
                                     <i class="fas fa-phone me-2"></i>
-                                    <span class="admin-phone">9900993162</span>
+                                    <a href="tel:9847813736" class="admin-phone">9900993162</a>
                                 </div>
                             </div>
                         </div>
