--- a/event.html
+++ b/event.html
@@ -22,6 +22,11 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="static/images/logo/favicon.ico">
+    <link rel="icon" type="image/png" href="static/images/logo/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="static/images/logo/favicon.svg">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
