--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
         }
         
         .admin-role {
-            flex: 0 0 150px;
+            flex: 0 0 50%;
             font-weight: bold;
             color: #2c3e50;
             margin-right: 15px;
@@ -198,7 +198,7 @@
     <div class="container py-5">
         <div class="row g-4">
             <!-- Contact Details -->
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="contact-card h-100">
                     <h4 class="mb-4">Contact Information</h4>
                     <ul class="list-unstyled">
@@ -217,7 +217,7 @@
             </div>
 
             <!-- Temple Administration -->
-            <div class="col-md-4">
+            <div class="col-md-6">
                 <div class="contact-card h-100 temple-administration">
                     <h4 class="mb-4">Temple Administration</h4>
                     <div class="admin-grid">
