--- a/contact.html
+++ b/contact.html
@@ -359,14 +359,14 @@
         </div>
     </footer>
     <!-- Bootstrap 5 JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
     
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Bootstrap JS and Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
         document.getElementById("read-more").addEventListener("click", function() {
             var hiddenContacts = document.querySelectorAll(".hidden-contact");
             hiddenContacts.forEach(function(contact) {
@@ -377,6 +377,6 @@
             var buttonText = document.getElementById("read-more").innerText === "Read More" ? "Read Less" : "Read More";
             document.getElementById("read-more").innerText = buttonText;
         });
-    </script>    
+    </script>     -->
 </body>
 </html>
