--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/svg+xml" href="static/images/logo/favicon.svg">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css?v=5.2.3" rel="stylesheet">
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
     <style>
