--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css?v=5.2.3" rel="stylesheet">
     <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <link href="static/css/aos.css" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="static/images/logo/favicon.ico">
@@ -38,17 +38,18 @@
             --secondary-color: #f8f9fa;
         }
     
-        /* Mobile-first header */
+        /* Fallback if webp not supported using @supports not */
         .header-background {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.2');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.webp?v=1.0.2');
             background-size: cover;
             background-position: center;
             color: white;
-            /* min-height: 300px; */
-            padding: 2rem 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        }
+
+        @supports not (background-image: url("data:image/webp;base64,UklGRh4AAABXRUJQVlA4TCEAAAAvAAAAHEpIQkAASAAAAAAAAAAAAPbWcyc=")) {
+            .header-background {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.2');
+            }
         }
 
         /* Responsive typography */
@@ -88,7 +89,7 @@
             position: relative;
             background-color: inherit;
             width: 100%;
-            margin-bottom: 1.5rem;
+            /* margin-bottom: 1.5rem; */
         }
 
         .timeline-item::after {
@@ -144,8 +145,9 @@
         /* Responsive section divider */
         .section-divider {
             height: 4px;
-            background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-            margin: 2rem 0;
+            /* background: linear-gradient(90deg, var(--primary-color) 0%, var(--secondary-color) 100%); */
+            background: radial-gradient(circle, var(--primary-color) 0%, var(--secondary-color) 100%);
+            /* margin: 2rem 0; */
         }
 
         /* Tablet and larger screens */
@@ -171,10 +173,6 @@
             .timeline-item.right::after {
                 left: -10px;
             }
-
-            /* .header-background {
-                min-height: 400px;
-            } */
         }
 
         /* Touch-friendly elements */
