Changed favicon relative path to absolute

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <meta property="og:site_name" content="Ulakudaya Perumal Temple" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="static/images/logo/favicon.ico">
-    <link rel="icon" type="image/png" href="static/images/logo/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/svg+xml" href="static/images/logo/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="https://ulakudayaperumaltemple.org/static/images/logo/favicon.ico">
+    <link rel="icon" type="image/png" href="https://ulakudayaperumaltemple.org/static/images/logo/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="https://ulakudayaperumaltemple.org/static/images/logo/favicon.svg">
 
     <!-- Bootstrap CSS -->
     <link href="static/css/bootstrap.min.css?v=5.2.3" rel="stylesheet">
