Preload the first carousal image

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </style>
     <!-- Preload Header Image for Faster Loading -->
     <link rel="preload" href="static/images/header/temple-header.webp?v=1.0.2" as="image">
+    <link rel="preload" href="static/images/image_01.webp?v=1.0.2" as="image">
 </head>
 <body>
     <!-- Navigation -->
