--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
             img.src = `${imagesPath}${filename}?${version}`;
             img.classList.add("d-block", "w-100");
             img.alt = `Temple image ${index + 1}`;
-            img.loading = "lazy";
+            if (index !== 0) {
+                img.loading = "lazy";
+            }
             picture.appendChild(img);
 
             carouselItem.appendChild(picture);
