--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         }
     </style>
     <!-- Preload Header Image for Faster Loading -->
-    <link rel="preload" href="static/images/header/temple-header.webp?v=1.0.2" as="image">
-    <link rel="preload" href="static/images/image_01.webp?v=1.0.2" as="image">
+    <link rel="preload" fetchpriority="high" href="static/images/header/temple-header.webp?v=1.0.2" as="image">
+    <link rel="preload" fetchpriority="high" href="static/images/image_01.webp?v=1.0.2" as="image">
 </head>
 <body>
     <!-- Navigation -->
