--- a/event.html
+++ b/event.html
@@ -33,10 +33,6 @@
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
     <style>
-        .row {
-            display: block !important;
-        }
-
         /* Fallback for WebP support using @supports */
         .header-background {
             background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.2');
@@ -53,7 +49,7 @@
         /* For image sizing in event cards */
         .fixed-size-image {
             width: 100%; /* Ensures the image fits the card width */
-            height: 200px; /* Fixed height for all images */
+            height: 300px; /* Fixed height for all images */
             object-fit: cover; /* Maintains aspect ratio and crops excess */
             border-top-left-radius:var(--bs-card-border-radius); /* Matches the card's border radius */
             border-top-right-radius:var(--bs-card-border-radius); /* Matches the card's border radius */
@@ -95,8 +91,8 @@
     <!-- Events Section -->
     <section class="container py-5">
         <h2 class="text-center mb-4" data-aos="fade-up">Upcoming Events</h2>
-        <div class="justify-content-center row">
-            <div class="col-md-6 mb-4" data-aos="fade-up">
+        <div class="row justify-content-center">
+            <div class="col-md-8 mb-4" data-aos="fade-up">
                 <div class="card">
                     <picture>
                         <source srcset="static/images/event/festival.webp" type="image/webp">
@@ -116,8 +112,8 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6 mb-4" data-aos="fade-up">
+        <div class="row justify-content-center">
+            <div class="col-md-8 mb-4" data-aos="fade-up">
                 <div class="card">
                     <picture>
                         <source srcset="static/images/event/pongala.webp" type="image/webp">
