Event image correction and navbar selection highlight

--- a/event.html
+++ b/event.html
@@ -54,6 +54,18 @@
             border-top-left-radius:var(--bs-card-border-radius); /* Matches the card's border radius */
             border-top-right-radius:var(--bs-card-border-radius); /* Matches the card's border radius */
         }
+        /* Dim the event card images by default */
+        .card-img-top {
+            filter: brightness(50%);
+            transition: filter 0.3s ease-in-out;
+        }
+
+        /* Restore brightness on hover or focus */
+        .card:hover .card-img-top,
+        .card:focus-within .card-img-top {
+            filter: brightness(75%);
+        }
+
     </style>
 </head>
 <body>
