Address-contact alignment correction

--- a/contact.html
+++ b/contact.html
@@ -216,18 +216,17 @@
                                 Viduthi Ulakudaya Perumal Temple Trust<br>
                                 Reg. No. IV/13/2004<br>
                                 Nedunganda, Trivandrum, Kerala<br>
-                                Pin: 695307<br>
-                                <br>
-                                <div class="admin-item">
-                                    <div class="admin-role"> Office Secretary</div>
-                                        <div class="admin-details">
-                                            <div class="admin-name">Sathyaseelan</div>
-                                            <div class="admin-contact">
-                                                <i class="fas fa-phone me-2"></i>
-                                                <a href="tel:8086316286" class="admin-phone">8086316286</a>
-                                            </div>
-                                        </div>
-                                </div>    
+                                Pin: 695307
+                            </div>
+                        </li>
+                        <li class="admin-item">
+                            <div class="admin-role">Office Secretary</div>
+                            <div class="admin-details">
+                                <div class="admin-name">Sathyaseelan</div>
+                                <div class="admin-contact">
+                                    <i class="fas fa-phone me-2"></i>
+                                    <a href="tel:8086316286" class="admin-phone">8086316286</a>
+                                </div>
                             </div>
                         </li>
                         
