--- a/event.html
+++ b/event.html
@@ -133,9 +133,9 @@
                             alt="Special Pooja Ceremony">
                     </picture>
                     <div class="card-body">
-                        <h5 class="card-title"><strong>Samooha Ponkala</strong></h5>
+                        <h5 class="card-title"><strong>Samooha Pongala</strong></h5>
                         <p class="card-text">
-                            Experience the divine blessings of the Samooha Ponkala, dedicated to Lord Ulakudaya Perumal, as
+                            Experience the divine blessings of the Samooha Pongala, dedicated to Lord Ulakudaya Perumal, as
                             part
                             of
                             the Pada Maholsavam.
