Changed bootstrap path and aos path to static

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <link href="static/css/bootstrap.min.css?v=5.2.3" rel="stylesheet">
     <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
-    <link href="static/css/aos.css" rel="stylesheet">
+    <link href="static/css/aos.css?v=2.3.4" rel="stylesheet">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="static/images/logo/favicon.ico">
