--- a/event.html
+++ b/event.html
@@ -28,8 +28,8 @@
     <link rel="icon" type="image/svg+xml" href="static/images/logo/favicon.svg">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css?v=5.2.3" rel="stylesheet">
+    <link href="static/css/aos.css?v=2.3.4" rel="stylesheet">
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
     <style>
